@@ -39,11 +39,12 @@
  *
  *****************************************************************************/
 
-#ifdef UNIX
-#include "visp/vpSickLDMRS.h"
-#include "visp/vpMath.h"
-#include "visp/vpDebug.h"
-#include "visp/vpTime.h"
+#if ( defined(WIN32) && !defined(UNIX) )
+
+#include <visp/vpSickLDMRS.h>
+#include <visp/vpMath.h>
+#include <visp/vpDebug.h>
+#include <visp/vpTime.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <fcntl.h>
