@@ -41,6 +41,7 @@
 
 #include <visp/vpClient.h>
 
+#if (! (defined(WIN32) && defined(UNIX)) )
 
 vpClient::vpClient() :  vpNetwork()
 {}
@@ -217,3 +218,5 @@ bool vpClient::connectServer(vpNetwork::vpReceptor &serv)
   std::cout << "Connected!" << std::endl;
   return true;
 }
+
+#endif // #if (! (defined(WIN32) && defined(UNIX)) )
