@@ -49,6 +49,8 @@
 #include <visp/vpNetwork.h>
 #include <visp/vpTime.h>
 
+#if (! (defined(WIN32) && defined(UNIX)) )
+
 /*!
   \class vpClient
   
@@ -215,4 +217,5 @@ public:
   void          stop();
 };
 
+#endif // #if (! (defined(WIN32) && defined(UNIX)) )
 #endif
