@@ -45,7 +45,7 @@
 
 #include <visp/vpConfig.h>
 
-#ifdef UNIX
+#if ( defined(WIN32) && !defined(UNIX) )
 
 /*!
 
