@@ -41,7 +41,7 @@
 
 
 
-#if defined UNIX
+#if ( defined(WIN32) && !defined(UNIX) )
 #  include <stdio.h>
 #  include <visp/vpKeyboard.h>
 
