@@ -50,7 +50,7 @@
 
 #include <visp/vpConfig.h>
 
-#if defined UNIX
+#if ( defined(WIN32) && !defined(UNIX) )
 
 #  include <iostream>
 #  include <termios.h>
